# FairReciprocalRecommendation

./: README.md  pyproject.toml
notebooks/: example.ipynb
src/: alternate_fw.py  iter_lp.py  market.py  naive.py  prod.py  tu_matching.py  utils.py
