[project]
name = "fairreciprocalrecommendation"
version = "0.1.0"
description = "A repository for the paper 'Fair Reciprocal Recommendation in Matching Markets' by Yoji Tomita and Tomohiko Yokoyama, Recsys2024."
authors = [
    { name = "miiitomi", email = "ytommyrad@gmail.com" }
]
dependencies = [
    "numpy>=2.0.1",
    "cvxpy>=1.5.2",
    "jupyter>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fairreciprocalrecommendation"]
